<resources>
    <string name="app_name">Izzo</string>

    <string name="welcome">Welcome to Izzo!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_0">Empty</string>
    <string name="tab_1">Programs</string>
    <string name="tab_2">New Team</string>
    <string name="tab_3">New Workout</string>
    <string name="title_activity_programs">ProgramsActivity</string>

    <string name="finalize_team">Finalize your team!</string>
    <string name="action_done">Done</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>

    <string name="checkbox_has_team">This program does not belong to a team</string>

    <string name="lbl_upload_team_icon">Please provide an optional logo for your team</string>
    <string name="lbl_upload_program_icon">Please provide an optional logo above for your program</string>
    <string name="lbl_phone_number">Enter phone number…</string>
    <string name="lbl_team_name">Enter team name here…</string>
    <string name="lbl_program_name">Enter program name here…</string>
    <string name="lbl_team_description">Enter a description…</string>
    <string name="lbl_team_members">List members…</string>
    <string name="lbl_add_exercise">Add Exercise</string>
    <string name="lbl_add_new_cardio_exercise">Add New Cardio Exercise</string>
    <string name="lbl_add_new_weighttraining_exercise">Add New Weight Training Exercise</string>
    <string name="lbl_workout_plan">Workout Plan</string>
    <string name="lbl_exercise">Exercise</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_sets">Sets</string>
    <string name="lbl_reps">Reps</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_distance">Distance</string>
    <string name="lbl_select_duration">Duration (min)</string>
    <string name="lbl_select_distance">Distance (m)</string>
    <string name="lbl_pounds">lbs</string>
    <string name="lbl_minutes">min</string>
    <string name="lbl_meters">m</string>
    <string name="lbl_select_exercise">Exercise</string>
    <string name="lbl_select_num_sets">Number of Sets</string>
    <string name="lbl_select_num_reps">Number of Reps</string>
    <string name="lbl_select_program_team">Does this program belong a team?</string>
    <string name="lbl_save_program">Save Program!</string>
    <string name="lbl_select_weight">Weight (lbs)</string>
    <string name="btn_add_new_member">Add New Member</string>
    <string name="btn_start_workout">Start Workout</string>
    <string name="btn_complete_workout">Complete Workout</string>

    <string name="hello_world">Hello world!</string>
    <string name="team_members">Team Members</string>
    <string name="title_activity_new_team">NewTeamActivity</string>
    <string name="title_activity_new_program">NewProgramActivity</string>
    <string name="title_activity_in_flight">InFlightActivity</string>
    <string name="title_activity_contacts_list">New Team</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="title_activity_start_up">StartUpActivity</string>
    <string name="title_activity_team_members">TeamMembersActivity</string>
    <string name="title_activity_new_program_details">NewProgramDetailsActivity</string>
    <string name="title_activity_time_picker_custom">TimePickerCustom</string>
    <string name="title_activity_current_program">CurrentProgramActivity</string>
    <string name="title_activity_workout">WorkoutActivity</string>
</resources>
