<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.six.the.from.izzo.ui.CurrentProgramActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_program_logo"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        app:civ_border_width="4dp"
        app:civ_border_color="#FFFFFF" />
    <RelativeLayout
        android:id="@+id/lv_exercises_layout"
        android:layout_below="@id/img_program_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" >
        <Button
            android:id="@+id/btn_start_workout"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_start_workout"
            android:textColor="#FFFFFF"
            android:background="@color/grey" />
        <LinearLayout
            android:id="@+id/lv_exercises_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal"
            android:background="@color/white">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/lbl_exercise"
                android:textColor="@color/izzo_red"
                android:textSize="11sp"
                android:textAllCaps="true" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_type"
                android:textColor="@color/izzo_red"
                android:textSize="11sp"
                android:textAllCaps="true" />
        </LinearLayout>
        <ListView
            android:layout_below="@id/lv_exercises_title"
            android:id="@+id/lv_exercises"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
